e2e/tests/all/snapshots/home_booking_rest_desktop.snap
---
source: e2e/src/suite.rs
description: home_booking at desktop (rest)
expression: tree
---
heading "Book a table" [level=3]
  StaticText "Book a table"
tablist "Book a table"
  tab "Book" [selected]
    StaticText "Book"
  tab "Your bookings" [selected=false]
    StaticText "Your bookings"
tabpanel "Book"
  form "Book a table"
    LabelText
      StaticText "Name"
    textbox "Name"
    LabelText
      StaticText "Day"
    combobox "Day" [expanded=false] [haspopup=dialog]
    status [atomic] [live=polite]
    LabelText
      StaticText "Guests"
    combobox "Guests" = How many? [expanded=false] [haspopup=listbox]
      StaticText "How many?"
    status [atomic] [live=polite]
    switch "On the terrace" [checked=false]
    button "Book"
      StaticText "Book"
region "Notifications (F8)"
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
--> aria-controls [id="lsx-N-panel-0"] (rendered above)
