e2e/tests/all/snapshots/home_booking_rest_mobile.snap
---
source: e2e/src/suite.rs
description: home_booking at mobile (rest)
expression: tree
---
heading "Book a table" [level=2]
  StaticText "Book a table"
tablist
  tab "Book" [selected]
    StaticText "Book"
  tab "Your bookings" [selected=false]
    StaticText "Your bookings"
tabpanel "Book"
  form "Book a table"
    LabelText
      StaticText "Name"
    generic
      textbox "Name"
        generic
    LabelText
      StaticText "Day"
    generic
      combobox "Day" [expanded=false] [haspopup=dialog]
        generic
    status [atomic] [live=polite]
    LabelText
      StaticText "Guests"
    generic
      combobox "Guests" = How many? [expanded=false] [haspopup=listbox]
        StaticText "How many?"
    status [atomic] [live=polite]
    switch "On the terrace" [checked=false]
    button "Book"
      StaticText "Book"
generic
  region "Notifications (F8)"
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
--> aria-controls [id="lsx-N-panel-0"] (rendered above)
