e2e/tests/all/snapshots/hover_card_open_desktop.snap
---
source: e2e/src/suite.rs
description: hover_card at desktop (open)
expression: tree
---
button "Before"
  StaticText "Before"
button "Ada Lovelace"
  StaticText "Ada Lovelace"
button "After"
  StaticText "After"
dialog "Ada Lovelace"
  paragraph
    StaticText "Wrote the first algorithm meant for a machine."
  button "Profile"
    StaticText "Profile"
  button "Follow"
    StaticText "Follow"
