e2e/tests/all/snapshots/hover_card_rest_mobile.snap
---
source: e2e/src/suite.rs
description: hover_card at mobile (rest)
expression: tree
---
button "Before"
  StaticText "Before"
button "Ada Lovelace"
  StaticText "Ada Lovelace"
button "After"
  StaticText "After"
