e2e/tests/all/snapshots/icon_provider_rest_desktop.snap
---
source: e2e/src/suite.rs
description: icon_provider at desktop (rest)
expression: tree
---
button "Swap glyph"
  StaticText "Swap glyph"
LabelText
  StaticText "Default"
combobox "Default" = Apple [expanded=false] [haspopup=listbox]
  StaticText "Apple"
status [atomic] [live=polite]
LabelText
  StaticText "Provided"
combobox "Provided" = Apple [expanded=false] [haspopup=listbox]
  StaticText "Apple"
status [atomic] [live=polite]
LabelText
  StaticText "Tabler"
combobox "Tabler" = Apple [expanded=false] [haspopup=listbox]
  StaticText "Apple"
status [atomic] [live=polite]
