e2e/tests/all/snapshots/icon_rest_desktop.snap
---
source: e2e/src/suite.rs
description: icon at desktop (rest)
expression: tree
---
generic
  button "Swap colour"
    StaticText "Swap colour"
    generic
  image "Verified"
    image
