e2e/tests/all/snapshots/icon_rest_mobile.snap
---
source: e2e/src/suite.rs
description: icon at mobile (rest)
expression: tree
---
generic
  button "Swap colour"
    StaticText "Swap colour"
    generic
  image "Verified"
    image
