e2e/tests/all/snapshots/image_cropper_disabled_rest_desktop.snap
---
source: e2e/src/suite.rs
description: image_cropper_disabled at desktop (rest)
expression: tree
---
image "A sun on blue"
slider "Crop area" = 10 [disabled] [valuemax=100] [valuemin=0]
slider "Top left corner" = 80 [disabled] [valuemax=100] [valuemin=0]
slider "Top right corner" = 80 [disabled] [valuemax=100] [valuemin=0]
slider "Bottom right corner" = 80 [disabled] [valuemax=100] [valuemin=0]
slider "Bottom left corner" = 80 [disabled] [valuemax=100] [valuemin=0]
paragraph
  StaticText "10,10,80,80"
image "A sun on blue, to pan"
slider "Crop area" = 30 [disabled] [valuemax=100] [valuemin=0]
slider "Zoom" = -0.003143551293760538 [disabled] [valuemax=2.0768563747406006] [valuemin=-0.2231435477733612]
